# Evergreen.lxl

./: LICENSE  README.md  config.lua  highlights.lua  highlights.scm  init.lua  installer.lua  languages.lua  manifest.json  meson.build  meson_options.txt  parser.lua  style.lua  util.lua
queries/c/: highlights.scm
queries/cpp/: highlights.scm
queries/d/: highlights.scm
queries/go/: highlights.scm
queries/javascript/: highlights.scm
queries/julia/: highlights.scm
queries/lua/: highlights.scm
queries/rust/: highlights.scm
queries/zig/: highlights.scm
subprojects/: ltreesitter.wrap  tree-sitter-c.wrap  tree-sitter-cpp.wrap  tree-sitter-d.wrap  tree-sitter-diff.wrap  tree-sitter-go-mod.wrap  tree-sitter-go.wrap  tree-sitter-javascript.wrap  tree-sitter-julia.wrap  tree-sitter-lua.wrap  tree-sitter-rust.wrap  tree-sitter-zig.wrap  tree-sitter.wrap
subprojects/packagefiles/ltreesitter/: meson.build  meson_options.txt
subprojects/packagefiles/tree-sitter/: meson.build
subprojects/packagefiles/tree-sitter-c/: meson.build
subprojects/packagefiles/tree-sitter-cpp/: meson.build
subprojects/packagefiles/tree-sitter-d/: meson.build
subprojects/packagefiles/tree-sitter-diff/: meson.build
subprojects/packagefiles/tree-sitter-go/: meson.build
subprojects/packagefiles/tree-sitter-go-mod/: meson.build
subprojects/packagefiles/tree-sitter-javascript/: meson.build
subprojects/packagefiles/tree-sitter-julia/: meson.build
subprojects/packagefiles/tree-sitter-lua/: meson.build
subprojects/packagefiles/tree-sitter-rust/: meson.build
subprojects/packagefiles/tree-sitter-zig/: meson.build
